--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,7 +12,7 @@
  *
  *= require bootstrap
  *= require fureas-style
- *= require button
+ *= require button-styles
  *= require cards
  *= require custom-modal
  *= require override-bootstrap-responsive
