--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,15 +6,19 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a  href="#"><img src="assets/images/gangout-logo.png" class="logo-padding logo-size" /></a>
+                <a  href="#"><img src="assets/fureas-logo-180.png" class="logo-padding logo-size" /></a>
             </div>
             <nav role="navigation" class="collapse navbar-collapse bs-navbar-collapse">
+              <% if current_user %>
+               <%= link_to 'Sign out', signout_path, :class =>"btn btn-primary navbar-btn navbar-right sign-in-btn visible-sm visible-md visible-lg" %>
+                <% else %>
                 <button type="button" class="btn btn-primary navbar-btn navbar-right sign-in-btn visible-sm visible-md visible-lg" data-toggle="modal" data-target="#myModal">Sign in</button>
+                <% end %>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="active"><a href="#" >Communities</a></li>
                     <li><a href="#">Events</a></li>
                     <li><a href="#">Blog</a></li>
-                    <li><a href="#">About Us</a></li>
+                    <li data-toggle="modal" data-target="#myModal1" ><a>About Us</a></li>
                 </ul>
                 <button type="button" class="btn btn-primary navbar-btn navbar-right sign-in-btn hidden-sm hidden-md hidden-lg" data-toggle="modal" data-target="#myModal">Sign in</button>
             </nav>
