--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a  href="#"><img src="assets/fureas-logo-180.png" class="logo-padding logo-size" /></a>
+                <a  href="#"><img src="assets/logo.png" class="logo-padding logo-size" /></a>
             </div>
             <nav role="navigation" class="collapse navbar-collapse bs-navbar-collapse">
               <% if current_user %>
