--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,11 @@
   <div class="modal fade" id="myModal1" tabindex="-1" aria-hidden="true">
     <%= render :partial => "welcome/new" %>
   </div>
+  <div class="modal fade" id="myModal2" tabindex="-1" aria-hidden="true">
+    <%= render :partial => "users/new" %>
+  </div>
+
+
   <%= render :partial => "layouts/footer" %>
 </body>
 </html>
