--- a/app/views/welcome/_new.html.erb
+++ b/app/views/welcome/_new.html.erb
@@ -10,7 +10,7 @@
                     <div class="modal-body text-center">
                         <div class="getstarted"> Get Started</div>
                         <div class="row">
-                            <div class="col-sm-12"> <img src="/assets/anjan.jpg" class="mine-image"> </div>
+                            <div class="col-sm-12"> <img src="/assets/anjan.jpg" class="mine-image img-circle"> </div>
                             <div class="row"><div class="col-sm-12"><h3>Hi Friends,Lets develop our Fureas site,Please share if you any idea or anything new to develop this.</h3>  </div></div>
                             <div class="col-sm-3"> </div>
                         </div>
