--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,7 @@
   <h3 class="f1">FUREAS <br> Forum of united resoursces for engineers and scholars.Which is invented to innovate, collabarate and to share ideas.This community basicalyy the gang that can help people to solve the problems in any kind of platforms. </h3></div>
 
 <div>
-  <h1 class="f2">Hi guys please enter your details here</h1>
+  <h1 class="f2">To become a member of this group please create your details</h1>
 
   <h3 class="access-word"> Click the below butoon to create your deatils</h3>
 
