--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,7 +16,7 @@
                 <% end %>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="active"><a href="#" >Communities</a></li>
-                    <li><a href="#">Events</a></li>
+                    <li><a href="/posts">Posts</a></li>
                     <li><a href="#">Blog</a></li>
                     <li><a href="/users">About Us</a></li>
                 </ul>
