--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
 </head>
 <body>
   <%= render :partial => "layouts/header" %>
+  <% flash.each do |name, msg| %>
+  <%= content_tag :div, msg, :id => "flash#{name}" %>
+  <% end %>
   <%= yield %>
   <div class="modal fade" id="myModal" tabindex="-1" aria-hidden="true">
     <%= render :partial => "sessions/new" %>
