--- a/app/assets/stylesheets/override-bootstrap.css
+++ b/app/assets/stylesheets/override-bootstrap.css
@@ -4,7 +4,7 @@ body {
 .navbar {
     margin-bottom: 0px;
 }
-.navbar-static-top {
+.navbar-fixed-top {
     border-bottom: 1px solid #646464;
     background-color: #ffffff;
 }
