--- a/app/assets/stylesheets/post.css
+++ b/app/assets/stylesheets/post.css
@@ -60,3 +60,28 @@
 .post-date{
 font-size:10px;
 }
+.banner{
+background-color: #D9534F;
+height: 100px;
+width:500px;
+border-radius: 1px;
+color: white;
+margin-left: 250px;
+margin-top: 50px;
+padding-left: 50px;
+padding-top: 50px;
+}
+.fb-comments{
+  width: 1000px;
+  height: 500px;
+  overflow: auto}
+ .fb-comments span, .fb-comments iframe { width: 100% !important; }
+ .com-box{
+margin-top: 200px;
+ }
+#fb-root{
+  width:1000px;
+}
+.fbFeedbackContent .composer{
+  width: 524px;
+}
