--- a/app/assets/stylesheets/sprite.css
+++ b/app/assets/stylesheets/sprite.css
@@ -90,6 +90,8 @@
 .about{
   background: url("bg1.jpg");
   min-height: 100px;
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
 .form-align{
   margin-top: 25px;
@@ -118,4 +120,27 @@
   margin-top: 50px;
   margin-left: 600px;
   margin-bottom: 50px;
+}
+.image-style{
+  height: 200px;
+  width: 200px;
+}
+.image-content{
+  text-align: center;
+  overflow: hidden;
+}
+.table-bordered{
+  table-layout: fixed;
+    width: 800px;
+}
+.family-members{
+border: 1px solid black;
+}
+.family{
+text-align: center;
+
+}
+.profile{
+  margin-top:100px;
+  margin-bottom: 100px;
 }
