--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,5 @@
-<header id="top" class="navbar navbar-static-top bs-docs-nav">
+<header id="top" class="navbar navbar-fixed-top bs-docs-nav">
+
             <div class="navbar-header">
                 <button data-target=".bs-navbar-collapse" data-toggle="collapse" type="button" class="navbar-toggle">
                     <span class="sr-only">Toggle navigation</span>
@@ -6,7 +7,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a  href="#"><img src="assets/fureas-logo-180.png" class="logo-padding logo-size" /></a>
+                <a  href="#"><img src="/assets/fureas-logo-180.png" class="logo-padding logo-size" /></a>
             </div>
             <nav role="navigation" class="collapse navbar-collapse bs-navbar-collapse">
               <% if current_user %>
@@ -16,7 +17,7 @@
                 <% end %>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="active"><a href="#" >Communities</a></li>
-                    <li><a href="/posts">Posts</a></li>
+                    <li><a href="/comments">Posts</a></li>
                     <li><a href="#">Blog</a></li>
                     <li><a href="/users">About Us</a></li>
                 </ul>
