--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,25 @@
-<div class="profile">
-<table class="table table-bordered">
- <tr>
-  <td><%= image_tag @user.image, :class =>"image-style" %>
-</td>
-<td>
-<h4 class="image-name"><%= @user.name %></h4>
-</td>
-</tr>
-</table>
-</div>
+<!-- <div class="profile"> -->
+
+  <div class="myprofile">
+    <div class="row">
+     <div class="col-sm-2">
+      <div class="image-border"><%= image_tag @user.image, :class =>"image-style" %></div>
+
+     </div>
+     <div class="col-sm-10">
+      <h3 class="profile-name"><strong>Name: <%= @user.name %></strong></h3>
+      <h3 class="profile-gender"><strong>Gender: <%= @user.gender %></strong></h3>
+      <h3 class="profile-email"><strong>E-mail: <%= @user.email %></strong></h3>
+      <h3 class="profile-number"><strong>Contact Number: <%= @user.contact_number %></strong></h3>
+     </div>
+     <div class="col-sm-12">
+       <h3 class="profile-number"><strong>Address: <%= @user.address %></strong></h3>
+      <h3 class="profile-from"><strong>From: <%= @user.state %>, <%= @user.country %></strong></h3>
+     </div>
+
+     <%= link_to 'Edit your profile',  edit_user_path, :class => "btn btn-default" %>
+
+    </div>
+  </div>
+
+<!-- </div> -->
