Added inotary link

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,6 +20,7 @@
                     <li><a href="/comments">Posts</a></li>
                     <li><a href="#">Blog</a></li>
                     <li><a href="/users">About Us</a></li>
+             <li><a href="http://it.inotary.qwinixtech.com?referral=Fureas">Inotary</a></li>
                 </ul>
                 <button type="button" class="btn btn-primary navbar-btn navbar-right sign-in-btn hidden-sm hidden-md hidden-lg" data-toggle="modal" data-target="#myModal">Sign in</button>
             </nav>
