For inotary testing

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,6 @@
 <footer class="">
   <div class="footer-labels">
+  <a href="http://it.inotary.qwinixtech.com?referral=Fureas">Inotary</a>&nbsp;<span class="icons-down-arrow footer-arrow-margin"> </span>&nbsp;
     <a href="#">Home </a>&nbsp;<span class="icons-down-arrow footer-arrow-margin"> </span>&nbsp;
     <a href="#">About Us </a>&nbsp;<span class="icons-down-arrow footer-arrow-margin"> </span>&nbsp;
     <a href="#">Events </a>&nbsp;<span class="icons-down-arrow footer-arrow-margin"> </span>&nbsp;
